--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "module": "es2015",
-    "types": []
-  },
-  "exclude": [
-  ]
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../out-tsc/app",
+        "module": "es2015",
+        "lib": ["es6", "dom"],
+        "types": []
+    },
+    "exclude": []
 }
